--- a/src/app/pages/auth/login/login.page.scss
+++ b/src/app/pages/auth/login/login.page.scss
@@ -5,7 +5,12 @@ ion-item{
 ion-button{
     --background: #062f77;
 }
-
+.screen {
+    background-color: #3880ff;
+}
 a{
     color: #fff;
+}
+.style14 {
+    border-top: 1px solid black;
 }
