--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Register</ion-title>
+    <ion-title>Registration</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,28 +8,23 @@
 
   <form #form="ngForm" (ngSubmit)="register(form)" method="post">
     <ion-item>
-      <ion-label position="floating">First Name</ion-label>
-      <ion-input ngModel name="fName"></ion-input>
+      <ion-label position="floating">User Name*</ion-label>
+      <ion-input ngModel type="text" name="username" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Last Name</ion-label>
-      <ion-input ngModel name="lName"></ion-input>
+      <ion-label position="floating">Email ID*</ion-label>
+      <ion-input type="email" ngModel name="email" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" ngModel name="email"></ion-input>
+      <ion-label position="floating">Password*</ion-label>
+      <ion-input type="password" ngModel name="password" required></ion-input>
     </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" ngModel name="password"></ion-input>
-    </ion-item>
-
-    <ion-button type="submit" expand="full" color="danger">Register</ion-button>
+    <hr />
+    <ion-button type="submit" expand="block" color="success" size="large">Register</ion-button>
   </form>
 
   <p text-center>Already have a account?</p>
-  <ion-button expand="full" color="primary" (click)="loginModal()">Login</ion-button>
+  <ion-button expand="block" color="primary" (click)="loginModal()">Login</ion-button>
 </ion-content>
